traducePyXJava/PythonXJavaParser.py
# Generated from PythonXJava.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonXJavaParser ( Parser ):

    grammarFileName = "PythonXJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "<INVALID>", "'('", "')'", "','", 
                     "':'", "'='", "'print'", "'return'", "'+'", "'*'", 
                     "'-'", "'/'" ]

    symbolicNames = [ "<INVALID>", "DEF", "IDENTIFIER", "LPAREN", "RPAREN", 
                      "COMMA", "COLON", "ASSIGN", "PRINT", "RETURN", "PLUS", 
                      "MULTIPLY", "REST", "DIVIDE", "NUMBER", "WS", "NEWLINE" ]

    RULE_program = 0
    RULE_function = 1
    RULE_params = 2
    RULE_indented_block = 3
    RULE_statement = 4
    RULE_var_assign = 5
    RULE_print_statement = 6
    RULE_return_statement = 7
    RULE_function_call = 8
    RULE_expr = 9

    ruleNames =  [ "program", "function", "params", "indented_block", "statement", 
                   "var_assign", "print_statement", "return_statement", 
                   "function_call", "expr" ]

    EOF = Token.EOF
    DEF=1
    IDENTIFIER=2
    LPAREN=3
    RPAREN=4
    COMMA=5
    COLON=6
    ASSIGN=7
    PRINT=8
    RETURN=9
    PLUS=10
    MULTIPLY=11
    REST=12
    DIVIDE=13
    NUMBER=14
    WS=15
    NEWLINE=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonXJavaParser.EOF, 0)

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonXJavaParser.FunctionContext)
            else:
                return self.getTypedRuleContext(PythonXJavaParser.FunctionContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonXJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonXJavaParser.StatementContext,i)


        def getRuleIndex(self):
            return PythonXJavaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PythonXJavaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 774) != 0):
                self.state = 22
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 20
                    self.function()
                    pass
                elif token in [2, 8, 9]:
                    self.state = 21
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 26
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 27
            self.match(PythonXJavaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(PythonXJavaParser.DEF, 0)

        def IDENTIFIER(self):
            return self.getToken(PythonXJavaParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(PythonXJavaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PythonXJavaParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(PythonXJavaParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(PythonXJavaParser.NEWLINE, 0)

        def indented_block(self):
            return self.getTypedRuleContext(PythonXJavaParser.Indented_blockContext,0)


        def params(self):
            return self.getTypedRuleContext(PythonXJavaParser.ParamsContext,0)


        def getRuleIndex(self):
            return PythonXJavaParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = PythonXJavaParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.match(PythonXJavaParser.DEF)
            self.state = 30
            self.match(PythonXJavaParser.IDENTIFIER)
            self.state = 31
            self.match(PythonXJavaParser.LPAREN)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 32
                self.params()


            self.state = 35
            self.match(PythonXJavaParser.RPAREN)
            self.state = 36
            self.match(PythonXJavaParser.COLON)
            self.state = 37
            self.match(PythonXJavaParser.NEWLINE)
            self.state = 38
            self.indented_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(PythonXJavaParser.IDENTIFIER)
            else:
                return self.getToken(PythonXJavaParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonXJavaParser.COMMA)
            else:
                return self.getToken(PythonXJavaParser.COMMA, i)

        def getRuleIndex(self):
            return PythonXJavaParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = PythonXJavaParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(PythonXJavaParser.IDENTIFIER)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 41
                self.match(PythonXJavaParser.COMMA)
                self.state = 42
                self.match(PythonXJavaParser.IDENTIFIER)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Indented_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonXJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonXJavaParser.StatementContext,i)


        def getRuleIndex(self):
            return PythonXJavaParser.RULE_indented_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndented_block" ):
                listener.enterIndented_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndented_block" ):
                listener.exitIndented_block(self)




    def indented_block(self):

        localctx = PythonXJavaParser.Indented_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_indented_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 48
                    self.statement()

                else:
                    raise NoViableAltException(self)
                self.state = 51 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def print_statement(self):
            return self.getTypedRuleContext(PythonXJavaParser.Print_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(PythonXJavaParser.Return_statementContext,0)


        def var_assign(self):
            return self.getTypedRuleContext(PythonXJavaParser.Var_assignContext,0)


        def NEWLINE(self):
            return self.getToken(PythonXJavaParser.NEWLINE, 0)

        def function_call(self):
            return self.getTypedRuleContext(PythonXJavaParser.Function_callContext,0)


        def getRuleIndex(self):
            return PythonXJavaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = PythonXJavaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.print_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.return_statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.var_assign()
                self.state = 56
                self.match(PythonXJavaParser.NEWLINE)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                self.function_call()
                self.state = 59
                self.match(PythonXJavaParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_assignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PythonXJavaParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(PythonXJavaParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonXJavaParser.ExprContext,0)


        def getRuleIndex(self):
            return PythonXJavaParser.RULE_var_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_assign" ):
                listener.enterVar_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_assign" ):
                listener.exitVar_assign(self)




    def var_assign(self):

        localctx = PythonXJavaParser.Var_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(PythonXJavaParser.IDENTIFIER)
            self.state = 64
            self.match(PythonXJavaParser.ASSIGN)
            self.state = 65
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(PythonXJavaParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(PythonXJavaParser.LPAREN, 0)

        def function_call(self):
            return self.getTypedRuleContext(PythonXJavaParser.Function_callContext,0)


        def RPAREN(self):
            return self.getToken(PythonXJavaParser.RPAREN, 0)

        def NEWLINE(self):
            return self.getToken(PythonXJavaParser.NEWLINE, 0)

        def getRuleIndex(self):
            return PythonXJavaParser.RULE_print_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_statement" ):
                listener.enterPrint_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_statement" ):
                listener.exitPrint_statement(self)




    def print_statement(self):

        localctx = PythonXJavaParser.Print_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_print_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(PythonXJavaParser.PRINT)
            self.state = 68
            self.match(PythonXJavaParser.LPAREN)
            self.state = 69
            self.function_call()
            self.state = 70
            self.match(PythonXJavaParser.RPAREN)
            self.state = 71
            self.match(PythonXJavaParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(PythonXJavaParser.RETURN, 0)

        def NEWLINE(self):
            return self.getToken(PythonXJavaParser.NEWLINE, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonXJavaParser.ExprContext,0)


        def getRuleIndex(self):
            return PythonXJavaParser.RULE_return_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_statement" ):
                listener.enterReturn_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_statement" ):
                listener.exitReturn_statement(self)




    def return_statement(self):

        localctx = PythonXJavaParser.Return_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_return_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(PythonXJavaParser.RETURN)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2 or _la==14:
                self.state = 74
                self.expr(0)


            self.state = 77
            self.match(PythonXJavaParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PythonXJavaParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(PythonXJavaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PythonXJavaParser.RPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonXJavaParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonXJavaParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonXJavaParser.COMMA)
            else:
                return self.getToken(PythonXJavaParser.COMMA, i)

        def getRuleIndex(self):
            return PythonXJavaParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)




    def function_call(self):

        localctx = PythonXJavaParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(PythonXJavaParser.IDENTIFIER)
            self.state = 80
            self.match(PythonXJavaParser.LPAREN)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2 or _la==14:
                self.state = 81
                self.expr(0)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 82
                    self.match(PythonXJavaParser.COMMA)
                    self.state = 83
                    self.expr(0)
                    self.state = 88
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 91
            self.match(PythonXJavaParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PythonXJavaParser.IDENTIFIER, 0)

        def NUMBER(self):
            return self.getToken(PythonXJavaParser.NUMBER, 0)

        def function_call(self):
            return self.getTypedRuleContext(PythonXJavaParser.Function_callContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonXJavaParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonXJavaParser.ExprContext,i)


        def PLUS(self):
            return self.getToken(PythonXJavaParser.PLUS, 0)

        def MULTIPLY(self):
            return self.getToken(PythonXJavaParser.MULTIPLY, 0)

        def REST(self):
            return self.getToken(PythonXJavaParser.REST, 0)

        def DIVIDE(self):
            return self.getToken(PythonXJavaParser.DIVIDE, 0)

        def getRuleIndex(self):
            return PythonXJavaParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PythonXJavaParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 94
                self.match(PythonXJavaParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.state = 95
                self.match(PythonXJavaParser.NUMBER)
                pass

            elif la_ == 3:
                self.state = 96
                self.function_call()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 104
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PythonXJavaParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 99
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 100
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 15360) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 101
                    self.expr(5) 
                self.state = 106
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[9] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         




